# StockSage

./: .deepsource.toml  .dockerignore  .env.example  .gitignore  404.html  Dockerfile  README.md  index.html  mkdocs.yml  pyproject.toml  search.html
docs/: index.md  introduction.md  methodology.md
introduction/: index.html
methodology/: index.html
outputs/: investment_report.md  termination_confirmation.md  thesis_json.json
search/: search_index.json
src/stocksage/: __init__.py  agents.py  config.py  crew.py  main.py  tasks.py  user_interface.py
src/stocksage/config/: agents.yaml  tasks.yaml
src/stocksage/tools/: __init__.py  alpha_vantage_tool.py  sentiment_analysis_tool.py  stock_symbol_fetcher_tool.py  yahoo_finance_tool.py
src/tradesymphony/: __init__.py  crew.py  main.py  telemetry_tracking.py
src/tradesymphony/config/: agents.yaml  tasks.yaml
src/tradesymphony/tools/: api_fetch.py  finance_tools.py
src/tradesymphony/ui/: streamlit_app.py  streamlit_app_plot.py
tests/tools/: test_alpha_vantage_tool.py  test_sentiment_analysis_tool.py  test_stock_symbol_fetcher_tool.py  test_yahoo_finance_tool.py
tests/utils/: test_api_fetch.py  test_telemetry_tracking.py
