[project]
name = "stocksage"
version = "0.1.0"
description = "stocksage using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "alpha-vantage>=3.0.0",
    "crewai[tools]>=0.102.0,<1.0.0",
    "langsmith>=0.1.147",
    "plotly>=6.0.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.43.0",
    "textblob>=0.19.0",
    "vadersentiment>=3.3.2",
    "yfinance>=0.2.54",
]

[project.scripts]
stocksage = "stocksage.main:run"
run_crew = "stocksage.main:run"
train = "stocksage.main:train"
replay = "stocksage.main:replay"
test = "stocksage.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
